# RUST-practice

./: .gitignore  README.md  duplicate_zeros.rs  exercise1.rs  exercise2.rs  hash_maps.rs  measure_time.rs  owenrship1.rs  ownership.md  vectors.rs
minigrep/: Cargo.toml  output.txt  text.txt
minigrep/src/: lib.rs  main.rs
traits_summarize/: Cargo.toml
traits_summarize/src/: lib.rs  main.rs
