[package]
name = "traits_summarize"
version = "0.1.0"
authors = ["jesus18ld44 <schmiss.poker@gmail.com>"]
edition = "2018"

[[bin]]
name = "traits_summarize"
path = "src/main.rs"

[lib]
name = "traits_summarize"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
